--- a/Score_Analysis.ipynb
+++ b/Score_Analysis.ipynb
@@ -467,15 +467,27 @@
    "id": "0beefbd9-98e8-405c-aee9-d19b385070df",
    "metadata": {},
    "source": [
-    "##Change any column if there and mixed value (int+string)"
+    "#Change any column if there and mixed value (int+string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "814612cd-cf5c-45e9-bc22-08d3be65aa02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWklyStudyHours\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWklyStudyHours\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m05-Oct\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m5-10\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#df[\"WklyStudyHours\"]= df[\"WklyStudyHours\"].str.replace(\"05-Oct\",\"5-10\")"
    ]
@@ -518,7 +530,7 @@
    "metadata": {},
    "source": [
     "# From The above chart we have analysed That:\n",
-    "#THe number of females in the data is more than the number of males \n"
+    "(THe number of females in the data is more than the number of males )\n"
    ]
   },
   {
